--- a/alternativa/index.html
+++ b/alternativa/index.html
@@ -1,6 +1,19 @@
-<div class="wrapper">
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="login.css">
+</head>
+
+
+<div
+class="wrapper">
    <!--<div class="logo"></div>-->
-   <img class="logo animated  zoomIn" data-wow-delay="200ms" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/56959/profile/profile-80_1.jpg" width="150px">
+   <img class="logo animated  zoomIn" data-wow-delay="200ms" src="C:\inetpub\wwwroot\img\logo.png" width="150px">
   <form class="login animated  flipInX">
     <p class="baslik" >KULLANICI GİRİŞİ</p>
     <input type="text" placeholder="Gsm Numarası" autofocus/> 
@@ -12,3 +25,8 @@
       <span class="state">Giriş Yap</span>
     </button>
   </form>
+  
+  <body>
+  
+</body>
+</html>
