--- a/alternativa/index.html
+++ b/alternativa/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="login.css">
+  <script src="alternativa\login.js"></script>
 </head>
 
 
@@ -15,14 +16,14 @@ class="wrapper">
    <!--<div class="logo"></div>-->
    <img class="logo animated  zoomIn" data-wow-delay="200ms" src="C:\inetpub\wwwroot\img\logo.png" width="150px">
   <form class="login animated  flipInX">
-    <p class="baslik" >KULLANICI GİRİŞİ</p>
-    <input type="text" placeholder="Gsm Numarası" autofocus/> 
+    <p class="baslik" >LOGIN</p>
+    <input type="text" placeholder="Usuario" autofocus/> 
     <i class="fa fa-user"></i>
-    <input type="password" placeholder="Parola" />
+    <input type="password" placeholder="Password" />
     <i class="fa fa-key"></i>
     <button >
       <i class="spinner"></i> 
-      <span class="state">Giriş Yap</span>
+      <span class="state">Enviar</span>
     </button>
   </form>
   
