nav meter links reales

--- a/inc/nav.html
+++ b/inc/nav.html
@@ -1,16 +1,16 @@
 <link rel="stylesheet" href="css\nav.css">
 <nav class="dropdownmenu">
     <ul>
-      <li><a href="http://www.jochaho.com/wordpress/">Home</a></li>
-      <li><a href="http://www.jochaho.com/wordpress/about-pritesh-badge/">Noticias</a></li>
-      <li><a href="#">feed externo</a>
+      <li><a href="index.php">Home</a></li>
+      <li><a href="feed_interno.php">Noticias</a></li>
+      <li><a href="feed_web.php">feed externo</a>
         <ul id="submenu">
           <li><a href="http://www.jochaho.com/wordpress/difference-between-svg-vs-canvas/">Difference between SVG vs. Canvas</a></li>
           <li><a href="http://www.jochaho.com/wordpress/new-features-in-html5/">New features in HTML5</a></li>
           <li><a href="http://www.jochaho.com/wordpress/creating-links-to-sections-within-a-webpage/">Creating links to sections within a webpage</a></li>
         </ul>
       </li>
-      <li><a href="http://www.jochaho.com/wordpress/category/news/">Registrarse</a></li>
-      <li><a href="http://www.jochaho.com/wordpress/about-pritesh-badge/">Contacto</a></li>
+      <li><a href="registro.php">Registrarse</a></li>
     </ul>
+    <img src="img\logo.png" alt="musicalmi">
   </nav>
