meter en nav homes

--- a/inc/nav.html
+++ b/inc/nav.html
@@ -5,9 +5,8 @@
       <li><a href="feed_interno.php">Noticias</a></li>
       <li><a href="feed_web.php">feed externo</a>
         <ul id="submenu">
-          <li><a href="http://www.jochaho.com/wordpress/difference-between-svg-vs-canvas/">Difference between SVG vs. Canvas</a></li>
-          <li><a href="http://www.jochaho.com/wordpress/new-features-in-html5/">New features in HTML5</a></li>
-          <li><a href="http://www.jochaho.com/wordpress/creating-links-to-sections-within-a-webpage/">Creating links to sections within a webpage</a></li>
+          <li><a href="home_admin.php"> home normal</a></li>
+          <li><a href="home_normal.php">home php</a></li>
         </ul>
       </li>
       <li><a href="registro.php">Registrarse</a></li>
