css fondos y estilo del registro

--- a/inc/nav.html
+++ b/inc/nav.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="css\nav.css">
 <nav class="dropdownmenu">
     <ul>
-      <li><a href="index.php">Home</a></li>
+      <li><a href="index.php">Login</a></li>
       <li><a href="feed_interno.php">Noticias</a></li>
       <li><a href="feed_web.php">feed externo</a>
         <ul id="submenu">
