--- a/inc/nav.html
+++ b/inc/nav.html
@@ -5,8 +5,8 @@
       <li><a href="feed_interno.php">Noticias</a></li>
       <li><a href="feed_web.php">feed externo</a>
         <ul id="submenu">
-          <li><a href="home_admin.php"> home normal</a></li>
-          <li><a href="home_normal.php">home php</a></li>
+         <!--  <li><a href="home_admin.php"> home normal</a></li>
+          <li><a href="home_normal.php">home php</a></li> -->
         </ul>
       </li>
       <li><a href="registro.php">Registrarse</a></li>
