--- a/inc/nav.html
+++ b/inc/nav.html
@@ -1,15 +1,42 @@
 <link rel="stylesheet" href="css\nav.css">
-<nav class="dropdownmenu">
-    <ul>
-      <li><a href="index.php">Login</a></li>
-      <li><a href="feed_interno.php">Noticias</a></li>
-      <li><a href="feed_web.php">feed externo</a>
-        <ul id="submenu">
-         <!--  <li><a href="home_admin.php"> home normal</a></li>
-          <li><a href="home_normal.php">home php</a></li> -->
+<!--   <div class="wrapper_n">
+    <nav class="dropdownmenu">
+      <ul>
+        <li><a href="index.php">Login</a></li>
+        <li><a href="feed_interno.php">Noticias</a></li>
+        <li><a href="feed_web.php">feed externo</a>
+          <ul id="submenu">
+           <li><a href="home_admin.php"> home normal</a></li>
+            <li><a href="home_normal.php">home php</a></li>
+          </ul>
+        </li>
+        <li><a href="registro.php">Registrarse</a></li>
+      </ul>
+      <img src="img\logo.png" alt="musicalmi">
+    </nav>
+  </div> -->
+
+  
+  <header class="site-header">
+    <img  class="logo_header" src="img\logo.png" alt="musicalmi">
+   
+    <nav class="site-nav">
+      <ul>
+        <li class="active"><a href="index.php">Login</a></li>
+        <li><a href="feed_interno.php">Noticias</a></li>
+        <li><a href="feed_web.php">Feed externo</a></li>
+        <li><a href="registro.php">Registro</a></li>
+      </ul>
+    </nav>
+    <div class="account-actions">
+      <div class="account-dropdown">
+        ⚙
+        <ul>
+          <li>Your Account</li>
         </ul>
-      </li>
-      <li><a href="registro.php">Registrarse</a></li>
-    </ul>
-    <img src="img\logo.png" alt="musicalmi">
-  </nav>
+      </div>
+      <a href="index.php" class="sign-out-link">Sign Out</a>
+    </div>
+  </header>
+  
+  
